--- a/frontend/src/layouts/main/main.layout.module.scss
+++ b/frontend/src/layouts/main/main.layout.module.scss
@@ -1,18 +1,38 @@
 .main {
     height: 100vh;
     max-height: 100%;
-
     display: grid;
-    // grid-template-columns: auto 1fr auto;
-    // grid-template-rows: auto 1fr;
+    position: relative;
+    overflow: hidden;
+
+    .background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('@/resources/background.jpg') no-repeat center center;
+        background-size: cover;
+        filter: blur(5px);
+        transform: scale(1.1);
+        z-index: -1;
+    }
+
+    .backgroundOverlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.4);
+        z-index: -1;
+    }
 }
 
 .mainContent {
     padding: 50px 200px;
-  
-    overflow-y: scroll;
-  
     display: flex;
     flex-direction: column;
     gap: 10px;
+    z-index: 1;
 }
