feature: add broken google oauth button

--- a/frontend/src/pages/auth/auth-page.module.scss
+++ b/frontend/src/pages/auth/auth-page.module.scss
@@ -83,4 +83,9 @@
 .authFooter a:hover {
     text-decoration: underline;
 }
-  
+
+.buttonsWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
