--- a/frontend/src/pages/auth/auth-page.module.scss
+++ b/frontend/src/pages/auth/auth-page.module.scss
@@ -3,11 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f4f4f4;
 }
 
 .authCard {
-    background: white;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -88,4 +86,18 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    align-items: center;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('@/resources/background.jpg') no-repeat center center;
+    background-size: cover;
+    filter: blur(5px);
+    //transform: scale(1.1);
+    z-index: -1;
 }
