--- a/frontend/src/pages/auth/auth-page.module.scss
+++ b/frontend/src/pages/auth/auth-page.module.scss
@@ -3,6 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    max-height: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
 .authCard {
@@ -88,7 +91,6 @@
     gap: 8px;
     align-items: center;
 }
-
 .background {
     position: absolute;
     top: 0;
@@ -98,6 +100,17 @@
     background: url('@/resources/background.jpg') no-repeat center center;
     background-size: cover;
     filter: blur(5px);
-    //transform: scale(1.1);
+    transform: scale(1.1);
+    z-index: -1;
+    overflow-y: hidden;
+}
+
+.backgroundOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
     z-index: -1;
 }
