--- a/frontend/src/pages/profile/profile.page.module.scss
+++ b/frontend/src/pages/profile/profile.page.module.scss
@@ -70,8 +70,15 @@
 .createButton {
     background-color: c.$gray;
     color: c.$white;
-    @include sh.button-gray;
+    @include sh.button-bottom-medium-gray;
     @include sh.text-gray;
+
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+    &:active {
+        transform: translateY(2px);
+        @include sh.button-bottom-medium-gray-transform;
+    }
 }
 
 .buttonWrapper {
