--- a/frontend/src/styles/variables/shadow-variables.scss
+++ b/frontend/src/styles/variables/shadow-variables.scss
@@ -2,8 +2,20 @@
     box-shadow: 10px 10px #00000025;
 }
 
-@mixin button-gray {
-    box-shadow: 10px 10px #00000025;
+@mixin button-bottom-medium-gray {
+    box-shadow: 0 14px 0px #00000025, 0 8px 15px rgba($color: #000000, $alpha: 0.2);
+}
+
+@mixin button-bottom-medium-gray-transform {
+    box-shadow: 0 6px 0px #00000025, 0 6px 14px rgba($color: #000000, $alpha: 0.2);
+}
+
+@mixin button-bottom-small-gray {
+    box-shadow: 0 8px 0px #00000025, 0 6px 12px rgba($color: #000000, $alpha: 0.2);
+}
+
+@mixin button-bottom-small-gray-transform {
+    box-shadow: 0 5px 0px #00000025, 0 4px 11px rgba($color: #000000, $alpha: 0.2);
 }
 
 @mixin text-primary-large {
