feature: add quest page

--- a/frontend/src/modules/quests-card/components/my-quests/my-quests-item/my-quests-item.module.scss
+++ b/frontend/src/modules/quests-card/components/my-quests/my-quests-item/my-quests-item.module.scss
@@ -25,6 +25,9 @@
     }
 
     .questInfo {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
         z-index: 1;
     }
 }
