--- a/frontend/src/pages/profile/profile.page.module.scss
+++ b/frontend/src/pages/profile/profile.page.module.scss
@@ -85,3 +85,9 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.settingsButton {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
