feature: add image to quiz question

--- a/frontend/src/pages/quest/quest.page.module.scss
+++ b/frontend/src/pages/quest/quest.page.module.scss
@@ -29,6 +29,16 @@
     width: 100%;
     flex-grow: 1;
     padding: 20px;
+    display: flex;
+    gap: 20px;
+
+    .questionImage {
+      width: 30%;
+
+      & > img {
+        border-radius: 10px;
+      }
+    }
   }
 
   .answerContainer {
