--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,3 +8,13 @@
 
     font-family: KirangHaerang, sans-serif;
 }
+
+p {
+    font-size: 24px;
+    line-height: 1.5;
+}
+
+li {
+    font-size: 24px;
+    line-height: 1.5;
+}
