feature: add back button

--- a/frontend/src/pages/quest/quest.page.module.scss
+++ b/frontend/src/pages/quest/quest.page.module.scss
@@ -1,3 +1,4 @@
+@use "@/styles/variables/shadow-variables.scss" as sh;
 @use '@/styles/variables/color-variables' as c;
 
 .container {
@@ -64,4 +65,5 @@
   padding: 10px;
   border-radius: 10px;
   border: 10px solid c.$primary;
+  @include sh.button-bottom-small-gray-transform;
 }
