--- a/frontend/src/components/primitives/wooden-containter/wooden-container.module.scss
+++ b/frontend/src/components/primitives/wooden-containter/wooden-container.module.scss
@@ -1,3 +1,4 @@
+@use "@/styles/variables/shadow-variables.scss" as sh;
 @use '@/styles/variables/color-variables' as c;
 
 .container {
@@ -8,4 +9,5 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  @include sh.button-bottom-small-gray-transform;
 }
