--- a/frontend/src/components/primitives/inputs/base-input/base-input.module.scss
+++ b/frontend/src/components/primitives/inputs/base-input/base-input.module.scss
@@ -8,6 +8,7 @@
   background-size: cover;
   border: c.$primary solid 5px;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+  color: c.$light;
 }
 
 .button::placeholder {
