--- a/frontend/src/pages/auth/auth-page.module.scss
+++ b/frontend/src/pages/auth/auth-page.module.scss
@@ -73,6 +73,11 @@
     margin-top: 1rem;
     font-size: 20px;
     color: c.$primary;
+
+    & a {
+        color: c.$primary !important;
+        font-weight: bold;
+    }
 }
 
 .authFooter a {
