--- a/frontend/src/components/primitives/buttons/base-button/base-button.module.scss
+++ b/frontend/src/components/primitives/buttons/base-button/base-button.module.scss
@@ -53,10 +53,13 @@
 
   &:hover {
     cursor: pointer;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.55);
   }
 
   &:disabled {
     pointer-events: none;
   }
+}
+
+.hover:hover {
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.55);
 }
