--- a/frontend/src/components/primitives/inputs/base-input/base-input.module.scss
+++ b/frontend/src/components/primitives/inputs/base-input/base-input.module.scss
@@ -1,14 +1,15 @@
 @use "@/styles/variables/color-variables.scss" as c;
+@use "@/styles/variables/font-variables.scss" as t;
+@use "@/styles/variables/background-variables.scss" as b;
 
 .button {
   width: 100%;
   padding: 8px;
   border-radius: 10px;
-  background: url('@/resources/wood.jpg');
-  background-size: cover;
   border: c.$primary solid 5px;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
   color: c.$light;
+
+  @include b.wood-dark-background;
 }
 
 .button::placeholder {
@@ -23,4 +24,8 @@
   height: 24px;
   opacity: 0.8;
   cursor: pointer;
+}
+
+.label {
+  @include t.label-small;
 }
