--- a/frontend/src/modules/edit-profile/model-content/model-content.module.scss
+++ b/frontend/src/modules/edit-profile/model-content/model-content.module.scss
@@ -1,8 +1,19 @@
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
 .imagePreview {
     width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.uploadPhotoWrapper {
+    margin: 0 auto;
 }
