--- a/frontend/src/modules/setting-profile/modal-content/model-content.module.scss
+++ b/frontend/src/modules/setting-profile/modal-content/model-content.module.scss
@@ -6,16 +6,16 @@
 }
 
 .imagePreview {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-.uploadPhotoWrapper {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
+.photoWrapper {
+    position: relative;
+    width: fit-content;
+    margin: 0 auto 10px;
 }
