--- a/frontend/src/pages/quest-updating/components/quest-updating-layout/quest-updating.layout.module.scss
+++ b/frontend/src/pages/quest-updating/components/quest-updating-layout/quest-updating.layout.module.scss
@@ -1,8 +1,10 @@
 @use '@/styles/variables/color-variables' as c;
+@use '@/styles/mixins/scrollbar-mixin' as scrollbar;
 
 .main {
   display: grid;
   grid-template-columns: 1fr 7fr 1fr;
+  gap: 20px;
 }
 
 .slidesWrapper {
@@ -12,6 +14,7 @@
 
   .slidesColumn {
     display: grid;
+    grid-template-rows: repeat(auto-fit, 100px);
     gap: 10px;
     height: 80vh;
     overflow-y: auto;
@@ -24,5 +27,6 @@
       transition: background-color 0.3s ease;
       background: white;
     }
+    @include scrollbar.scrollbar-style;
   }
 }
