--- a/frontend/src/pages/quest-updating/components/quest-updating-layout/quest-updating.layout.module.scss
+++ b/frontend/src/pages/quest-updating/components/quest-updating-layout/quest-updating.layout.module.scss
@@ -1,32 +1,6 @@
-@use '@/styles/variables/color-variables' as c;
-@use '@/styles/mixins/scrollbar-mixin' as scrollbar;
-
 .main {
   display: grid;
   grid-template-columns: 1fr 7fr 1fr;
   gap: 20px;
-}
-
-.slidesWrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-
-  .slidesColumn {
-    display: grid;
-    grid-template-rows: repeat(auto-fit, 100px);
-    gap: 10px;
-    height: 80vh;
-    overflow-y: auto;
-
-    .slide {
-      width: 100%;
-      height: 100px;
-      border: 10px solid c.$primary;
-      border-radius: 10%;
-      transition: background-color 0.3s ease;
-      background: white;
-    }
-    @include scrollbar.scrollbar-style;
-  }
+  height: 100%;
 }
