add simple timer, convert time

--- a/frontend/src/pages/profile/components/create-quest-modal/create-quest.modal.module.scss
+++ b/frontend/src/pages/profile/components/create-quest-modal/create-quest.modal.module.scss
@@ -3,3 +3,13 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.inputGroup {
+    display: flex;
+    align-items: flex-end;
+    gap: 10px;
+
+    p {
+        font-weight: 900;
+    }
+}
