feature: finish add task modal

--- a/frontend/src/pages/quest-updating/components/quest-updating-layout/comonents/quest-slides/components/upsert-quest-task-modal/upsert-quest-task-modal.module.scss
+++ b/frontend/src/pages/quest-updating/components/quest-updating-layout/comonents/quest-slides/components/upsert-quest-task-modal/upsert-quest-task-modal.module.scss
@@ -3,3 +3,14 @@
   flex-direction: column;
   gap: 10px;
 }
+
+.inputsWrapper {
+  display: flex;
+  gap: 20px;
+}
+
+.baseInputsWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
