--- a/frontend/src/modules/quests-card/components/my-quests/my-quests.module.scss
+++ b/frontend/src/modules/quests-card/components/my-quests/my-quests.module.scss
@@ -3,13 +3,19 @@
 .myQuestsWrapper {
     padding: 20px 40px;
     overflow: hidden;
+    // max-height: 100%;
+    // height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .myQuestsContainer {
+    flex-grow: 1;
+
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-height: 50vh;
+
     overflow-y: auto;
 
     @include scrollbar.scrollbar-style;
