--- a/frontend/src/modules/setting-profile/modal-content/components/delete-photo-button/delete-photo-button.module.scss
+++ b/frontend/src/modules/setting-profile/modal-content/components/delete-photo-button/delete-photo-button.module.scss
@@ -18,7 +18,7 @@
   justify-content: center;
   align-items: center;
 
-  background: url('../../../../../resources/wood.jpg');
+  background: url('@/resources/wood.jpg');
   background-size: cover;
 
   @include b.wood-darker-background-with-hover;
