feature: create a lot of conflicts

--- a/frontend/src/modules/test-modules/quest-answer/quest-answer.module.scss
+++ b/frontend/src/modules/test-modules/quest-answer/quest-answer.module.scss
@@ -1,4 +1,4 @@
-@use '@/styles/mixins/scrollbar-mixin.scss' as scrollbar;
+@use '@/styles/mixins/scrollbar-mixin' as scrollbar;
 
 .answerContainer {
   width: 100%;
