--- a/frontend/src/modules/setting-profile/modal-content/components/delete-photo-button/delete-photo-button.module.scss
+++ b/frontend/src/modules/setting-profile/modal-content/components/delete-photo-button/delete-photo-button.module.scss
@@ -21,6 +21,8 @@
   background: url('@/resources/wood.jpg');
   background-size: cover;
 
+  order: 100;
+
   @include b.wood-darker-background-with-hover;
 
   &:hover {
