feature: add task description

--- a/frontend/src/pages/quest-updating/components/quest-updating-layout/comonents/quest-updating-content/quest-updating.module.scss
+++ b/frontend/src/pages/quest-updating/components/quest-updating-layout/comonents/quest-updating-content/quest-updating.module.scss
@@ -19,3 +19,21 @@
   align-self: end;
   width: 230px;
 }
+
+.photoPickerWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-grow: 1;
+
+  & > button {
+    width: 230px;
+  }
+}
+
+.infoWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-grow: 1;
+}
