add results modal

--- a/frontend/src/pages/profile/profile.page.module.scss
+++ b/frontend/src/pages/profile/profile.page.module.scss
@@ -46,6 +46,12 @@
     @include sh.text-primary-large;
 }
 
+.xp {
+    color: c.$primary;
+    @include t.label-medium;
+    @include sh.text-primary-medium;
+}
+
 .profileInfo {
     display: flex;
     flex-direction: column;
