feature: logout fix

--- a/frontend/src/pages/quest/comonents/quest-question/quest-question.module.scss
+++ b/frontend/src/pages/quest/comonents/quest-question/quest-question.module.scss
@@ -7,9 +7,14 @@
 
   .questionImage {
     width: 30%;
+    flex-shrink: 0;
 
     & > img {
       border-radius: 10px;
     }
+  }
+
+  .questionInfo {
+    flex-grow: 1;
   }
 }
