feature: add labels

--- a/frontend/src/pages/profile/profile.page.module.scss
+++ b/frontend/src/pages/profile/profile.page.module.scss
@@ -49,7 +49,7 @@
 .xp {
     color: c.$primary;
     @include t.label-medium;
-    @include sh.text-primary-medium;
+    @include sh.text-primary-small;
 }
 
 .profileInfo {
