--- a/frontend/src/modules/quests-card/components/ratings/ratings.module.scss
+++ b/frontend/src/modules/quests-card/components/ratings/ratings.module.scss
@@ -18,3 +18,10 @@
 
     @include scrollbar.scrollbar-style;
 }
+
+.paginationControls {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
