--- a/frontend/src/pages/profile/profile.page.module.scss
+++ b/frontend/src/pages/profile/profile.page.module.scss
@@ -2,6 +2,12 @@
 @use '@/styles/variables/font-variables.scss' as t; 
 @use '@/styles/variables/shadow-variables.scss' as sh; 
 
+.profileWrapper {
+    display: flex;
+    flex-direction: column;
+    max-height: calc(100vh - 50px);
+}
+
 .profileContainer {
     display: grid;
     grid-template-columns: auto 1fr;
